[package]
name = "sosol-program"
version = "0.1.0"
description = "A utility token for Social Media built with Solana"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
solana-program = "1.6.7"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0.26"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.0"
solana-sdk = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]
